started navigation and header

--- a/index.html
+++ b/index.html
@@ -2,4 +2,10 @@
 layout: default
 ---
 
+<header>
+  {% include nav.html %}
+  <p>EX Semi Pro</p>
+  <p>Iwilldominate</p>
+</header>
+
 <p>Website About EX Semi Pro Iwdominate</p>
