--- a/about.html
+++ b/about.html
@@ -2,11 +2,31 @@
 layout: default
 ---
 
-<header class="about">
+<header class="about-main">
   {% include nav.html %}
   <div class="header-content">
     <h1>about IWDOMINATE</h1>
   </div>
 </header>
-
-<p>hi</p>
+<section class="about-info">
+  <h2>WHO IWDOMINATE IS</h2>
+  <p>IWDOMINATE is a Ex semi-pro, that played league of legends, for dignitas, curse, team liquid. Iwdominate doesn't care about your opinion unless you are a coach, analyst or a pro. Dom pretends to be pretend to be toxic - rush</p>
+</section>
+<section class="iwd-process">
+  <div>
+    <h2>iwdominate schedule</h2>
+    <ul>
+      <li>Meme</li>
+      <li>play</li>
+      <li>stream</li>
+      <li>flame</li>
+    </ul>
+  </div>
+</section>
+<section class="contact-iwd">
+  <div>
+    <h2>have questions? want a website?</h2>
+    <p>I can help</p>
+  </div>
+  <p class="link-stream"><a href="contact.html">Let's work together</a></p>
+</section>
